force-app/main/default/objects/Product_Package__c/Product_Package__c.object-meta.xml
<CustomObject>
    <label>My Product Bundle</label>
    <nameField>
        <label>Product Packages Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>My Product Bundles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>