force-app/main/default/objects/Product_Package__c/fields/Global_Package__c.field-meta.xml
<CustomField>
    <fullName>Global_Package__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if can be seen by all company or just individually</description>
    <label>Global Package</label>
    <type>Checkbox</type>
</CustomField>