force-app/main/default/objects/Product_Package__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <label>Products</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>